--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+#app-width {
+    width: 60%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#form-btn {
+    
+}
+
+@media (min-width: 426px) and (max-width: 768px) {
+    #app-width {
+        width: 80%;
+    }
+}
+
+@media (max-width: 425px) {
+    #app-width {
+        width: 100%;
+    }
+
+    #form-btn {
+        margin-top: 10px;
+    }
 }
